Cargo.toml erweitert mit Links

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "airust"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["LEVOGNE"]
 edition = "2021"
 description = "Trainierbare, modulare KI-Engine in Rust mit Compile-Zeit-Wissen"
@@ -8,7 +8,9 @@ license = "MIT"
 readme = "README.md"
 keywords = ["ai", "machine-learning", "knowledge", "compile-time"]
 categories = ["science", "development-tools::testing"]
-
+documentation = "https://docs.rs/airust"
+homepage = "https://github.com/LEVOGNE/airust"
+repository = "https://github.com/LEVOGNE/airust"
  
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
