--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "airust"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["LEVOGNE"]
 edition = "2021"
 description = "Trainierbare, modulare KI-Engine in Rust mit Compile-Zeit-Wissen"
@@ -20,3 +20,15 @@ strsim = "0.10"
 
 [build-dependencies]
 serde_json = "1.0"
+
+[[bin]]
+name = "context_test"
+path = "src/bin/context_test.rs"
+
+[[bin]]
+name = "knowledge_test"
+path = "src/bin/knowledge_test.rs"
+
+[[bin]]
+name = "structured_test"
+path = "src/bin/structured_test.rs"
