--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "airust"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["LEVOGNE"]
 edition = "2021"
-description = "Trainierbare, modulare KI-Engine in Rust mit Compile-Zeit-Wissen"
+description = "Trainable, modular AI engine in Rust with compile-time knowledge"
 license = "MIT"
 readme = "README.md"
 keywords = ["ai", "machine-learning", "knowledge", "compile-time"]
