--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "airust"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["LEVOGNE"]
 edition = "2021"
 description = "Trainable, modular AI engine in Rust with compile-time knowledge"
@@ -18,6 +18,20 @@ serde_json = "1.0"
 once_cell = "1.18"
 strsim = "0.10"
 indexmap = "1.9.1" 
+colored = { version = "2.0", optional = true }
+chrono = "0.4"
+thiserror = "1.0"
+unicode-normalization = "0.1"
+regex = "1.5"
+plotly = { version = "0.8", optional = true }
+tokio = { version = "1.0", features = ["full"], optional = true }
+plotters = { version = "0.3", optional = true }
+
+[features]
+default = ["colors"]
+colors = ["dep:colored"]
+plotting = ["dep:plotly", "dep:plotters"]
+async = ["dep:tokio"]
 
 [build-dependencies]
 serde_json = "1.0"
